--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,7 +15,7 @@
                 <div class="col-md-6 col-12 main_header_right align-items-center">
              
                     <figure>
-                        <img src="img/v.jpg" class="img-fluid" title=" cyphon" alt="">
+                        <img src="imgjjjj/v.jpg" class="img-fluid" title=" cyphon" alt="">
                     </figure>
                     </div>
                <div class="col-md-6 col-12 main_header_left">
